--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "bufferutil": "^4.0.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
@@ -20,7 +21,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
-    "typescript": "5.0.4"
+    "socket.io-client": "^4.6.1",
+    "typescript": "5.0.4",
+    "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.7",
