--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "bufferutil": "^4.0.7",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
+    "classnames": "^2.3.2",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,7 +25,10 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.10",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.33.1",
     "prettier": "^2.8.8"
   }
 }
