--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "^13.4.10",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^2.8.8"
   }
 }
